Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 5.5, 10.0, 10.1, 10.2, 10.3
-
Fix Version/s: 10.3.3
-
Component/s: Data types
-
Labels:None
Description
This is a similar problem to one that was earlier fixed in MySQL-5.0 under terms of:
Bug#27586 Wrong autoinc value assigned by LOAD DATA in the NO_AUTO_VALUE_ON_ZERO mode
Now for LOAD XML instead of LOAD DATA.
I put a file MYSQL_HOME_DIR/test/t1.xml with this content:
<list> |
<row a="1" b="bbb1"/> |
<row b="bbb2"/> |
</list> |
and run this script:
SET @@SQL_MODE=NO_AUTO_VALUE_ON_ZERO; |
CREATE OR REPLACE TABLE t1(a INT AUTO_INCREMENT PRIMARY KEY, b TEXT); |
LOAD XML INFILE 't1.xml' INTO TABLE t1 ROWS IDENTIFIED BY '<row>'; |
SELECT * FROM t1 ORDER BY b; |
It returns the following data:
+---+------+
|
| a | b |
|
+---+------+
|
| 1 | bbb1 |
|
| 0 | bbb2 |
|
+---+------+
|
The auto-increment value for the second record is wrong. It should be 2 rather than 0.
Attachments
Issue Links
- relates to
-
MDEV-15497 Wrong empty value in a GEOMETRY column on LOAD DATA
-
- Closed
-